# ai-plant-village-disease-id

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  railway.json  test_audio_service.py  test_suite.py  treatment_update_plan.txt
backend/rag/: advisor.py  ingest.py
backend/rag/raw_docs/: disease_apple_black_rot_002.md  disease_apple_cedar_rust_003.md  disease_apple_scab_001.md  disease_bell_pepper_bacterial_spot_001.md  disease_cherry_powdery_mildew_001.md  disease_corn_common_rust_002.md  disease_corn_gray_leaf_spot_001.md  disease_corn_northern_leaf_blight_003.md  disease_grape_black_rot_001.md  disease_grape_esca_002.md  disease_grape_leaf_blight_003.md  disease_orange_huanglongbing_001.md  disease_peach_bacterial_spot_001.md  disease_potato_early_blight_001.md  disease_potato_late_blight_002.md  disease_squash_powdery_mildew_001.md  disease_strawberry_leaf_scorch_001.md  disease_tomato_bacterial_spot_001.md  disease_tomato_early_blight_002.md  disease_tomato_late_blight_003.md  disease_tomato_leaf_mold_001.md  disease_tomato_mosaic_virus_001.md  disease_tomato_septoria_leaf_spot_001.md  disease_tomato_target_spot_001.md  disease_tomato_two_spotted_spider_mite_001.md  disease_tomato_yellow_leaf_curl_virus_001.md
backend/stt_tts/: stt_service.py  tts_service.py
backend/vision/: classifier.py  gradcam.py  validator.py
docs/assets/: HyperlocalTreatmentAdvisorView-D0me1slx.css  index-DMNSGfmk.js
frontend/: index.html
frontend_build/: index.html
frontend_build/assets/: index-B5-mRQhB.css  (+4 more)
frontend_build_2/: index.html
(+9 files in other folders)
