[project]
name = "plant-disease-advisor-backend"
version = "0.1.0"
description = "FastAPI backend for plant disease identification and treatment advisory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pillow>=10.2.0",
    "chromadb>=0.4.24",
    "langchain>=0.1.12",
    "langchain-openai>=0.0.9",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.1",
]
